--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 PORT = 8080
 DEV_MODE = developemt
 MONGO_URI = mongodb+srv://chatbot:12345@cluster0.hjjrfn4.mongodb.net/
+JWT_ACCESS_SECRET = dhruvjpatel
+JWT_ACCESS_EXPIREIN = 30min
+JWT_REFRESH_TOKEN = dhruvjpatel
+JWT_REFRESH_EXPIREIN = 15day
