--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "nodemon server.js",
+    "server": "nodemon server.js",
     "start":"node server.js",
     "client":"npm run dev --prefix ./client",
     "dev":"concurrently \"npm run server\" \"npm run client\""
